src/objects/Grant_Line_Item__c.object
<CustomObject>
    <description>Detailed usage of grant funds</description>
    <fields>
        <fullName>Amount__c</fullName>
        <description>Amount spent by line item</description>
        <label>Amount</label>
        <precision>12</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <description>Classification of the Grant Line items</description>
        <label>Category</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grant__c</fullName>
        <label>Grant</label>
        <referenceTo>Grant__c</referenceTo>
        <relationshipLabel>Grant Line Items</relationshipLabel>
        <relationshipName>Grant_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Grant Line Item</label>
    <nameField>
        <displayFormat>LI#-{00000}</displayFormat>
        <label>Grant Line Items Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Line Grant Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>